kustomize/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
spec:
  ingressClassName: nginx
  rules:
    - host: "2048.homecooked.nl"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: svc-2048
                port:
                  number: 8000
